--- a/src/app/event-thumbnail/event-thumbnail.component.html
+++ b/src/app/event-thumbnail/event-thumbnail.component.html
@@ -1,12 +1,21 @@
-<div class="well hoverwell thumbnail">
-        <h2>{{event.name}} </h2>
-        <div> Date : {{event.date}}</div>
-        <div> Time : {{event.time}}</div>
-        <div> Price : ${{event.price}}</div>
-        <div>
-            <span>Location: {{event.location.address}}</span>
-            <span>&nbsp;</span>
-            <span>{{event.location.city}}, {{event.location.country}}</span>
-        </div>
-        <button class="btn btn-primary" (click)="handleClick()">OK</button>
+<div class="well hoverwell thumbnail" [routerLink]="['/events',event.id]">
+    <h2>{{event?.name}} </h2>
+    <div> Date : {{event?.date}}</div>
+    <!-- [class.green]="event.time==='8:00 am'" -->
+     <div [ngSwitch]="event.time" > Time : {{event?.time}}
+        <span *ngSwitchCase="'8:00 am'"> Early Start</span>
+        <span *ngSwitchCase="'10:00 am'"> Late Start</span>
+       <span *ngSwitchDefault > Normal Start</span>
+       
+        
+        </div> 
+    <div> Price : ${{event.price}}</div>
+    <div *ngIf="event?.location">
+        <span>Location: {{event?.location?.address}}</span>
+        
+        <span class="padleft">{{event?.location?.city}}, {{event?.location?.country}}</span>
     </div>
+    <div *ngIf="event.imageUrl">
+        OnlineURL: {{event.imageUrl}}
+    </div>
+</div>
