--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,18 +1,25 @@
 <h1>Login</h1>
 <hr>
 <div class="col-md-4">
-    <form autocomplete="off"  #loginForm="ngForm" (ngSubmit)="login(loginForm.value)">
+    <form autocomplete="off"  #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" novalidate>
         <div class="form-group">
             <label for='userName'>UserName</label>
-            <input id="userName" type="text" class="form-control" placeholder="UserName.." name="userName" 
-            [(ngModel)]=userName>
+            <em *ngIf="loginForm.controls.userName?.invalid &&
+             (loginForm.controls.userName?.touched || mouseOver)" >Required</em>
+            <input  (ngModel)="userName"   name="userName" id="userName" type="text" class="form-control" placeholder="UserName.." 
+             required #userName="ngModel">
         </div>
         <div class="form-group">
             <label for='password'>Password</label>
+            <em *ngIf="loginForm.controls.password?.invalid && 
+            (loginForm.controls.password?.touched|| mouseOver)">Required</em> 
             <input id="password" type="password" class="form-control" placeholder="Password.." name="password"
-             [(ngModel)]="password">
+             [(ngModel)]="password" required>
         </div>
-        <button type ="submit" class="btn btn-primary">Login</button>
+        <span (mouseenter)="mouseOver=true" (mouseleave)="mouseOver=false">
+        <button type ="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Login</button></span>
         <button type="button" class="btn btn-default">Cancel</button>
+        
     </form>
+ 
 </div>
