--- a/src/app/event-details/create-session/create-session.component.html
+++ b/src/app/event-details/create-session/create-session.component.html
@@ -1,1 +1,52 @@
-<p>create-session works!</p>
+<div class="col-md-12">
+    <h3>Create Session</h3>
+</div>
+<div class="col-md-6">
+<form autocomplete="off" [formGroup]="newSessionForm" (ngSubmit)="saveSession(newSessionForm.value)">
+    <div class="form-group">
+        <label for="sessionName">Session Name</label>
+        <input id="sessionName" type="text" class="form-control" placeholder="session name..." formControlName="name" />
+        <em *ngIf="name.invalid && name.dirty">Required</em>
+    </div>
+    <div class="form-group">
+        <label for="presenter">Presenter</label>
+        <input id="presenter" type="text" class="form-control" placeholder="presenter name..." formControlName="presenter" />
+        <em *ngIf="presenter.invalid && presenter.dirty">Required</em>
+
+    </div>
+    <div class="form-group">
+        <label for="duration">Duration</label>
+        <select class="form-control" formControlName="duration">
+        <option value="">Select label</option>
+        <option value="1">Half Hour</option>
+        <option value="2">One Hour</option>
+        <option value="3">Half Day</option>
+        <option value="4">1 day</option>
+    </select>
+    <em *ngIf="duration.invalid && duration.dirty">Required</em>
+
+
+    </div>
+    <div class="form-group">
+            <label for="level">Level</label>
+            <em *ngIf="level.invalid && level.dirty">Required</em>
+            <select class="form-control"  formControlName="level">
+            <option value="">Select label</option>
+            <option value="Beginner">Beginner</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Advanced">Advanced</option>
+        </select>
+        
+    </div>
+    <div class="form-group">
+            <label for="abstract">Abstract</label>
+            <textarea rows="5"  formControlName="abstract" cols="100" class="form-control" placeholder="Enter the abstarct"></textarea>
+            <em *ngIf="abstract.invalid && abstract.dirty && abstract.errors.required">Required</em>
+            <em *ngIf="abstract?.errors.restrictedWords && abstract.invalid && abstract.dirty">
+                Restricted Words {{abstract.errors.restrictedWords}} found</em>
+    </div>
+    <button type ="submit" class="btn btn-primary" [disabled]="newSessionForm.invalid" >Save</button>
+        <button type="button" class="btn btn-default">Cancel</button>
+
+</form>
+</div>
