--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -21,4 +21,9 @@
         </address>
       </div>
     </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-5"
+    </div>
+<session-list [sessions]="event?.sessions"></session-list>
   </div>
