--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -17,7 +17,7 @@
              [(ngModel)]="password" required>
         </div>
         <span (mouseenter)="mouseOver=true" (mouseleave)="mouseOver=false">
-        <button type ="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Login</button></span>
+        <button type ="submit" class="btn btn-primary" >Save</button></span>
         <button type="button" class="btn btn-default">Cancel</button>
         
     </form>
